--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "note-taker",
+  "name": "express.js-note-taker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "uuid": "^9.0.0"
+    "uuid": "9.0.0"
   }
 }
